@@ -1,3 +1,9 @@
+2019-11-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClrange.c,
+	  support/regression/tests/bug-2956.c:
+	  Fix bug #2956.
+
 2019-11-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCC.y:
